--- a/HospSimWebsite/appsettings.Development.json
+++ b/HospSimWebsite/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "AzureDB": "MYSQLCONNSTR_localdb"
+    "AzureDB": "Server=fairbanks-mysql.mysql.database.azure.com;Database=fairbankssqldb;Uid=aLoneWitness@fairbanks-mysql;Pwd=BigGay69;"
   }
 }
