Added more repo commands and seperated registration from homeController.

--- a/HospSimWebsite/appsettings.Development.json
+++ b/HospSimWebsite/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "AzureDB": "Server=fairbanks-mysql.mysql.database.azure.com;Database=fairbankssqldb;Uid=aLoneWitness@fairbanks-mysql;Pwd=BigGay69;"
+    "AzureDB": "database=dbi407041;server=studmysql01.fhict.local;uid=dbi407041;pwd=wonderworld;"
   }
 }
