Added logic layer for slight validation reasons on registration.

--- a/HospSimWebsite.Logic/HospSimWebsite.Logic.csproj
+++ b/HospSimWebsite.Logic/HospSimWebsite.Logic.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\HospSimWebsite.DAL\HospSimWebsite.DAL.csproj" />
       <ProjectReference Include="..\HospSimWebsite.Model\HospSimWebsite.Model.csproj" />
+      <ProjectReference Include="..\HospSimWebsite.Repository\HospSimWebsite.Repository.csproj" />
     </ItemGroup>
 
 </Project>
