--- a/HospSimWebsite.DAL/HospSimWebsite.DAL.csproj
+++ b/HospSimWebsite.DAL/HospSimWebsite.DAL.csproj
@@ -14,4 +14,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HospSimWebsite.Model\HospSimWebsite.Model.csproj" />
+    </ItemGroup>
+
 </Project>
