--- a/HospSimWebsite.Logic/HospSimWebsite.Logic.csproj
+++ b/HospSimWebsite.Logic/HospSimWebsite.Logic.csproj
@@ -9,4 +9,10 @@
       <ProjectReference Include="..\HospSimWebsite.Repository\HospSimWebsite.Repository.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Identity.Core, Version=2.2.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.core\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Core.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
