--- a/HospSimWebsite.DAL/HospSimWebsite.DAL.csproj
+++ b/HospSimWebsite.DAL/HospSimWebsite.DAL.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
       <PackageReference Include="MySql.Data" Version="8.0.15" />
     </ItemGroup>
 
