--- a/HospSimWebsite.Logic/HospSimWebsite.Logic.csproj
+++ b/HospSimWebsite.Logic/HospSimWebsite.Logic.csproj
@@ -15,4 +15,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
