--- a/HospSimWebsite.Repository/HospSimWebsite.Repository.csproj
+++ b/HospSimWebsite.Repository/HospSimWebsite.Repository.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\HospSimWebsite.Model\HospSimWebsite.Model.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
